Add Static Page

--- a/Amozegar/Views/Home/Index.cshtml
+++ b/Amozegar/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
                     <h2 class="section-title">ما کی هستیم</h2>
                     <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
                     <p>کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد.</p>
-                    <a href="#" class="btn btn-primary mt-3">بیشتر بدانید</a>
+                    <a asp-action="AboutUs" asp-controller="Home" class="btn btn-primary mt-3">بیشتر بدانید</a>
                 </div>
             </div>
             <div class="col-lg-6 order-lg-1">
