--- a/Amozegar/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Views/Shared/_Layout.cshtml
@@ -34,7 +34,14 @@
 							<a class="nav-link" asp-action="ContactUs" asp-controller="Home">ارتباط با ما</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-primary text-white px-4" asp-action="Login" asp-controller="Account">ورود / ثبت نام</a>
+							@if(User.Identity.IsAuthenticated)
+							{
+								<a class="nav-link btn btn-primary text-white px-4" asp-action="Register" asp-controller="Account">ورود / ثبت نام</a>
+							}
+							else
+							{
+								<a class="nav-link btn btn-primary text-white px-4" asp-action="Register" asp-controller="Account">پنل کاربری</a>
+							}
 						</li>
 					</ul>
 				</div>
