Add Project User Panel With Edit Profile Section

--- a/Amozegar/Views/Account/Register.cshtml
+++ b/Amozegar/Views/Account/Register.cshtml
@@ -25,7 +25,7 @@
                                     <span class="input-group-text bg-white">
                                         <i class="fa-solid fa-user text-primary"></i>
                                     </span>
-                                    <input asp-for="@Model.FullName" class="form-control">
+                                    <input asp-for="@Model.FullName" class="form-control" id="profilePicture">
                                 </div>
                                 <span class="small text-danger" asp-validation-for="@Model.FullName"></span>
                             </div>
