--- a/Amozegar/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 						<li class="nav-item">
 							@if(User.Identity.IsAuthenticated)
 							{
-								<a class="nav-link btn btn-primary text-white px-4" asp-action="Register" asp-controller="Account">پنل کاربری</a>
+								<a class="nav-link btn btn-primary text-white px-4" asp-action="Index" asp-controller="Home" asp-area="Panel">پنل کاربری</a>
 							}
 							else
 							{
