--- a/Amozegar/Areas/Shared/Components/MobileNavigation/MobileNavigationComponent.cshtml
+++ b/Amozegar/Areas/Shared/Components/MobileNavigation/MobileNavigationComponent.cshtml
@@ -1,11 +1,12 @@
-﻿<!-- Mobile Navigation -->
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<!-- Mobile Navigation -->
 <nav class="mobile-nav d-lg-none">
 	<div class="container-fluid">
 		<div class="d-flex justify-content-between align-items-center py-3">
 			<button class="menu-toggle">
 				<i class="fas fa-bars"></i>
 			</button>
-			<a asp-action="Index" asp-controller="Home" class="mobile-logo">
+			<a asp-action="Index" asp-controller="Home" asp-area="" class="mobile-logo">
 				<img src="~/images/home/logo.png" alt="آموزگار">
 			</a>
 		</div>
