--- a/Amozegar/Areas/Panel/Views/Home/EditInformations.cshtml
+++ b/Amozegar/Areas/Panel/Views/Home/EditInformations.cshtml
@@ -10,6 +10,7 @@
 		<h3 class="card-title mb-4">ویرایش اطلاعات کاربری</h3>
 
 		<form method="post" novalidate enctype="multipart/form-data">
+			@Html.AntiForgeryToken()
 			<!-- Profile Picture -->
 			<div class="mb-4 text-center">
 				<div class="profile-picture-upload">
@@ -28,7 +29,7 @@
 			<!-- Personal Information -->
 
 			<div class="mb-3">
-				<label asp-for="@Model.FullName" class="form-label">نام کاربری</label>
+				<label asp-for="@Model.FullName" class="form-label"></label>
 				<div class="input-group">
 					<span class="input-group-text"></span>
 					<input class="form-control" asp-for="@Model.FullName" value="@(User.FindFirstValue("FullName"))">
