Add Class Section For Teachers (Except Delete sector)

--- a/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@using Amozegar.Data
+@inject AmozegarContext _context
+@inject UserManager<User> _userManager
+@{
+    var classIdentity = Context.GetRouteValue("classId")?.ToString();
+    var currentClass = _context.Classes
+    .Single(c => c.ClassIdentity == classIdentity);
+    var teacher = await _userManager.FindByIdAsync(currentClass.TeacherId);
+
+}
+<!DOCTYPE html>
 
 <html dir="rtl">
 <head>
@@ -29,44 +39,28 @@
                 <nav>
                     <a class="menu-item" asp-action="Index" asp-controller="Home" asp-area="">
                         <i class="fas fa-home"></i>
-                        <span>خانه</span>
+                        <span>برگشت به خانه</span>
                     </a>
-                    <a asp-action="Index" asp-controller="Home" asp-area="Panel" class="menu-item @(ViewBag.Route == "Dashboard" ? "active" : "")">
+                    <a asp-action="Index" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "Dashboard" ? "active" : "")">
                         <i class="fas fa-tachometer-alt"></i>
                         <span>داشبورد</span>
                     </a>
-                    <a asp-action="EditInformations" asp-controller="Home" asp-area="Panel" class="menu-item @(ViewBag.Route == "Edit" ? "active" : "")">
+                    <a asp-action="" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "Edit" ? "active" : "")">
                         <i class="fas fa-user-edit"></i>
-                        <span>ویرایش مشخصات</span>
+                        <span>دانش آموزان</span>
                     </a>
-                    <a asp-action="ChangePassword" asp-controller="Home" asp-area="Panel" class="menu-item @(ViewBag.Route == "ChangePassword" ? "active" : "")">
+                    <a asp-action="" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "ChangePassword" ? "active" : "")">
                         <i class="fas fa-key"></i>
-                        <span>ویرایش پسورد</span>
+                        <span>امتحانات</span>
                     </a>
-
-                    @if(User.IsInRole("Student"))
-                    {
-                        <a asp-action="Classes" asp-controller="Home" asp-area="Panel" asp-route-roleName="Student" class="menu-item">
-                            <i class="fas fa-user-cog"></i>
-                            <span>پنل دانش آموز</span>
-                        </a>
-                    }
-
-                    @if (User.IsInRole("Teacher"))
-                    {
-                        <a asp-action="Classes" asp-controller="Home" asp-area="Panel" asp-route-roleName="Teacher" class="menu-item">
-                            <i class="fas fa-user-cog"></i>
-                            <span>پنل معلم</span>
-                        </a>
-                    }
-
-                    @if (User.IsInRole("Admin"))
-                    {
-                        <a asp-action="Classes" asp-controller="Home" asp-area="Admin" class="menu-item">
-                            <i class="fas fa-user-cog"></i>
-                            <span>پنل ادمین</span>
-                        </a>
-                    }
+                    <a asp-action="" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "ChangePassword" ? "active" : "")">
+                        <i class="fas fa-key"></i>
+                        <span>تکالیف</span>
+                    </a>
+                    <a asp-action="" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "ChangePassword" ? "active" : "")">
+                        <i class="fas fa-key"></i>
+                        <span>اعلانات</span>
+                    </a>
 
                 </nav>
             </div>
@@ -74,7 +68,7 @@
             <div class="sidebar-footer">
                 <a class="menu-item text-danger" asp-action="Logout" asp-controller="Account" asp-area="">
                     <i class="fas fa-sign-out-alt"></i>
-                    <span>خروج از حساب کاربری</span>
+                    <span>خروج از کلاس</span>
                 </a>
             </div>
         </aside>
@@ -88,11 +82,12 @@
                     <div class="user-info-header">
                         <div class="user-info-content">
                             <div class="user-avatar">
-                                <img src="~/images/users/@(User.FindFirstValue("Image"))" alt="تصویر کاربر">
+                                <img src="~/images/classes/@currentClass.ClassImage" alt="تصویر کاربر">
                             </div>
                             <div class="user-details">
-                                <h2 class="user-name">@(User.FindFirstValue("FullName"))</h2>
-                                <p class="user-username text-truncate">@(User.Identity?.Name)</p>
+                                <h2 class="user-name">@currentClass.ClassName</h2>
+                                <p class="user-username text-truncate">ایدی کلاس : @currentClass.ClassIdentity</p>
+                                <p class="user-username text-truncate">نام مدرس : @teacher.FullName</p>
                             </div>
                         </div>
                     </div>
