--- a/Amozegar/Areas/Teacher/Views/_ViewImports.cshtml
+++ b/Amozegar/Areas/Teacher/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Amozegar
 @using Amozegar.Models
-@using Amozegar.Areas.Panel.Models
+@using Amozegar.Areas.Teacher.Models
 @using System.Security.Claims
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
