--- a/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
             </div>
 
             <div class="sidebar-footer">
-                <a class="menu-item text-danger" asp-action="Logout" asp-controller="Account" asp-area="">
+                <a class="menu-item text-danger" asp-action="Classes" asp-controller="Home" asp-area="Panel" asp-route-roleName="Teacher">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>خروج از کلاس</span>
                 </a>
