--- a/Amozegar/Areas/Student/Views/Classes/AddClass.cshtml
+++ b/Amozegar/Areas/Student/Views/Classes/AddClass.cshtml
@@ -11,7 +11,7 @@
                 <div class="card shadow-lg border-0">
                     <div class="card-body p-5">
                         <div class="text-center mb-5">
-                            <a asp-action="Index" asp-controller="Home">
+                            <a asp-action="Index" asp-controller="Home" asp-area="">
                                 <img src="~/images/home/logo.png" alt="آموزگار" class="mb-4">
                             </a>
                             <h2 class="fw-bold">ورود به کلاس</h2>
