--- a/Amozegar/Areas/Student/Views/Classes/DeleteClass.cshtml
+++ b/Amozegar/Areas/Student/Views/Classes/DeleteClass.cshtml
@@ -10,7 +10,7 @@
         <form method="post" class="my-3">
             @Html.AntiForgeryToken()
             @Html.HiddenFor(m => m.ClassId)
-            <button type="submit" class="btn btn-danger">حذف</button>
+            <button type="submit" class="btn btn-danger">ترک</button>
         </form>
     </div>
 </div>
