--- a/Amozegar/Areas/Teacher/Views/Home/Index.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Home/Index.cshtml
@@ -4,5 +4,10 @@
 
 }
 
-<h1>Index</h1>
+<h1>داشبورد</h1>
+<div class="alert alert-success">
+    خوش آمدید @(User.FindFirstValue("FullName"))
+</div>
+
+
 
