--- a/Amozegar/Areas/Student/Views/Home/Index.cshtml
+++ b/Amozegar/Areas/Student/Views/Home/Index.cshtml
@@ -1,7 +1,12 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "کلاس";
+
 }
 
-<h1>کلاس</h1>
+<h1>داشبورد</h1>
+<div class="alert alert-success">
+    خوش آمدید @(User.FindFirstValue("FullName"))
+</div>
+
+
 
