--- a/Amozegar/Areas/Student/Views/_ViewImports.cshtml
+++ b/Amozegar/Areas/Student/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Amozegar
 @using Amozegar.Models
 @using Amozegar.Areas.Student.Models
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
