--- a/Amozegar/Areas/Teacher/Views/Students/Accept.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Students/Accept.cshtml
@@ -1,16 +1,21 @@
 ﻿@model StudentsActionsViewModel
 @{
-    ViewData["Title"] = "قبول درخواست ورود";
+    ViewData["Title"] = "قبول کردن دانش آموز";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container my-2">
     <div class="alert alert-warning">
-        آیا از قبول درخواست دانش آموز با نام @Model.StudentName اطمینان دارید؟
+        آیا از قبول دانش آموز با نام @Model.StudentName اطمینان دارید؟
         <form method="post" class="my-3">
             @Html.AntiForgeryToken()
             @Html.HiddenFor(s => s.StudentInClassId)
-            <button type="submit" class="btn btn-warning">قبول کردن</button>
+            <a asp-action="Index"
+               asp-controller="Home"
+               asp-area="Teacher"
+               asp-route-classId="@ViewBag.ClassId"
+               class="btn btn-warning">برگشت به کلاس</a>
+            <button type="submit" class="btn btn-danger">قبول کردن</button>
         </form>
     </div>
 </div>
