--- a/Amozegar/Areas/Teacher/Views/Students/Remove.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Students/Remove.cshtml
@@ -4,18 +4,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <div class="container my-2">
     <div class="alert alert-warning">
-        آیا از بن کردن دانش آموز با نام @Model.StudentName اطمینان دارید؟
+        آیا از اخراج دانش آموز با نام @Model.StudentName اطمینان دارید؟
         <form method="post" class="my-3">
             @Html.AntiForgeryToken()
             @Html.HiddenFor(s => s.StudentInClassId)
             <a asp-action="Index"
-               asp-controller="Home"
-               asp-area="Teacher"
-               asp-route-classId="@ViewBag.ClassId"
-               class="btn btn-warning">برگشت به کلاس</a>
-            <button type="submit" class="btn btn-danger">بن کردن</button>
+            asp-controller="Home"
+            asp-area="Teacher"
+            asp-route-classId="@ViewBag.ClassId"
+                class="btn btn-warning">برگشت به کلاس</a>
+            <button type="submit" class="btn btn-danger">اخراج کردن</button>
         </form>
+
     </div>
 </div>
+
+
